<resources>
    <string name="app_name">Wordle</string>
    <string name="next">NEXT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wordle">Wordle</string>
    <string name="statistics">STATISTICS</string>
    <string name="played">Played</string>
    <string name="win">Win %</string>
    <string name="current_n_streak">Current\n Streak</string>
    <string name="max_n_streak">Max\n Streak</string>
    <string name="guess_distribution">GUESS DISTRIBUTION</string>
    <string name="Enter">Enter</string>
    <string name="Del">Del</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="RR">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>


</resources>