<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameScreenFragment">

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="4dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Not in word list"
        tools:alpha="1"/>

    <TextView
        android:id="@+id/wordle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wordle"
        android:textAlignment="center"
        android:textSize="48dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <LinearLayout
        android:id="@+id/first_letters_row"
        style="@style/rows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordle">

        <TextView
            android:id="@+id/first_row_1"
            style="@style/letters"
            android:background="@drawable/border"
            tools:text="A" />

        <TextView
            android:id="@+id/first_row_2"
            style="@style/letters" />

        <TextView
            android:id="@+id/first_row_3"
            style="@style/letters" />

        <TextView
            android:id="@+id/first_row_4"
            style="@style/letters" />

        <TextView
            android:id="@+id/first_row_5"
            style="@style/letters" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_letters_row"
        style="@style/rows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_letters_row">

        <TextView
            android:id="@+id/second_row_1"
            style="@style/letters"
            android:background="@drawable/border" />

        <TextView
            android:id="@+id/second_row_2"
            style="@style/letters" />

        <TextView
            android:id="@+id/second_row_3"
            style="@style/letters" />

        <TextView
            android:id="@+id/second_row_4"
            style="@style/letters" />

        <TextView
            android:id="@+id/second_row_5"
            style="@style/letters" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_letters_row"
        style="@style/rows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_letters_row">

        <TextView
            android:id="@+id/third_row_1"
            style="@style/letters"
            android:background="@drawable/border" />

        <TextView
            android:id="@+id/third_row_2"
            style="@style/letters" />

        <TextView
            android:id="@+id/third_row_3"
            style="@style/letters" />

        <TextView
            android:id="@+id/third_row_4"
            style="@style/letters" />

        <TextView
            android:id="@+id/third_row_5"
            style="@style/letters" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth_letters_row"
        style="@style/rows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_letters_row">

        <TextView
            android:id="@+id/fourth_row_1"
            style="@style/letters"
            android:background="@drawable/border" />

        <TextView
            android:id="@+id/fourth_row_2"
            style="@style/letters" />

        <TextView
            android:id="@+id/fourth_row_3"
            style="@style/letters" />

        <TextView
            android:id="@+id/fourth_row_4"
            style="@style/letters" />

        <TextView
            android:id="@+id/fourth_row_5"
            style="@style/letters" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth_letters_row"
        style="@style/rows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourth_letters_row">

        <TextView
            android:id="@+id/fifth_row_1"
            style="@style/letters"
            android:background="@drawable/border" />

        <TextView
            android:id="@+id/fifth_row_2"
            style="@style/letters" />

        <TextView
            android:id="@+id/fifth_row_3"
            style="@style/letters" />

        <TextView
            android:id="@+id/fifth_row_4"
            style="@style/letters" />

        <TextView
            android:id="@+id/fifth_row_5"
            style="@style/letters" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sixth_letters_row"
        style="@style/rows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifth_letters_row">

        <TextView
            android:id="@+id/sixth_row_1"
            style="@style/letters"
            android:background="@drawable/border" />

        <TextView
            android:id="@+id/sixth_row_2"
            style="@style/letters" />

        <TextView
            android:id="@+id/sixth_row_3"
            style="@style/letters" />

        <TextView
            android:id="@+id/sixth_row_4"
            style="@style/letters" />

        <TextView
            android:id="@+id/sixth_row_5"
            style="@style/letters" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/third_row_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_keyboard_row">

        <Button
            android:id="@+id/enter_button"
            style="@style/button"
            android:layout_width="80dp"
            android:text="@string/Enter" />

        <Button
            android:id="@+id/Z"
            style="@style/button"
            android:text="@string/Z" />

        <Button
            android:id="@+id/X"
            style="@style/button"
            android:text="@string/X" />

        <Button
            android:id="@+id/C"
            style="@style/button"
            android:text="@string/C" />

        <Button
            android:id="@+id/V"
            style="@style/button"
            android:text="@string/V" />

        <Button
            android:id="@+id/B"
            style="@style/button"
            android:text="@string/B" />


        <Button
            android:id="@+id/N"
            style="@style/button"
            android:text="@string/N" />


        <Button
            android:id="@+id/M"
            style="@style/button"
            android:text="@string/M" />


        <Button
            android:id="@+id/delete_button"
            style="@style/button"
            android:layout_width="80dp"
            android:text="@string/Del" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/first_keyboard_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sixth_letters_row">

        <Button
            android:id="@+id/Q"
            style="@style/button"
            android:text="@string/Q" />

        <Button
            android:id="@+id/W"
            style="@style/button"
            android:text="@string/W" />

        <Button
            android:id="@+id/E"
            style="@style/button"
            android:text="@string/E" />

        <Button
            android:id="@+id/RR"
            style="@style/button"
            android:text="@string/RR" />

        <Button
            android:id="@+id/T"
            style="@style/button"
            android:text="@string/T" />

        <Button
            android:id="@+id/Y"
            style="@style/button"
            android:text="@string/Y" />

        <Button
            android:id="@+id/U"
            style="@style/button"
            android:text="@string/U" />

        <Button
            android:id="@+id/I"
            style="@style/button"
            android:text="@string/I" />

        <Button
            android:id="@+id/O"
            style="@style/button"
            android:text="@string/O" />

        <Button
            android:id="@+id/P"
            style="@style/button"
            android:text="@string/P" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_keyboard_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_keyboard_row">

        <Button
            android:id="@+id/A"
            style="@style/button"
            android:text="@string/A" />

        <Button
            android:id="@+id/S"
            style="@style/button"
            android:text="@string/S" />

        <Button
            android:id="@+id/D"
            style="@style/button"
            android:text="@string/D" />

        <Button
            android:id="@+id/F"
            style="@style/button"
            android:text="@string/F" />

        <Button
            android:id="@+id/G"
            style="@style/button"
            android:text="@string/G" />

        <Button
            android:id="@+id/H"
            style="@style/button"
            android:text="@string/H" />

        <Button
            android:id="@+id/J"
            style="@style/button"
            android:text="@string/J" />

        <Button
            android:id="@+id/K"
            style="@style/button"
            android:text="@string/K" />

        <Button
            android:id="@+id/L"
            style="@style/button"
            android:text="@string/L" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>